[gd_scene load_steps=2 format=2]

[ext_resource path="res://mods/uwp/patches/better-settings-numbers/fps_slider.gd" type="Script" id=1]

[node name="fps_vbox" type="VBoxContainer"]
margin_right = 40.0
margin_bottom = 40.0
size_flags_horizontal = 3
script = ExtResource( 1 )

[node name="fps_label" type="Label" parent="."]
margin_right = 90.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "Unlimited FPS"
align = 2

[node name="fps_slider" type="HSlider" parent="."]
margin_top = 18.0
margin_right = 90.0
margin_bottom = 34.0
size_flags_horizontal = 3
size_flags_vertical = 4
step = 10.0

[connection signal="value_changed" from="fps_slider" to="." method="_on_fps_slider_value_changed"]
